# adventofcode

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: day1.rs  day2.rs  day4.rs  day5.rs  day6.rs  main.rs  util.rs
