[package]
name = "adventofcode"
version = "0.1.0"
authors = ["basti <12233784+sebastianseitz@users.noreply.github.com>"]

[dependencies]


[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"


[[bin]]
name = "day5"
path = "src/day5.rs"


[[bin]]
name = "day6"
path = "src/day6.rs"
